fixing modal width on mobile; comparing differences on emergency lists

--- a/src/index.scss
+++ b/src/index.scss
@@ -429,7 +429,7 @@ time {
     max-height: calc(100% - 1rem);
     padding: 0.5rem;
     position: relative;
-    // width: calc(100% - 1rem);
+    width: calc(100% - 1rem);
 
     .card__top,
     .card__bottom {
